<resources>
    <string name="app_name">TaskerWidget</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="widget_default_title">Default Widget Title</string>
    <string name="add_widget">Add Widget</string>
    <string name="configure">Add blah</string>
    <string name="plugin_name">TaskerWidget</string>
    <string name="fa_sort">&#xf0dc;</string>
    <string name="action_sort">Sort By...</string>
    <string name="sort_name_asc">Name Ascending</string>
    <string name="sort_name_desc">Name Descending</string>
    <string name="sort_id_asc">ID Ascending</string>
    <string name="sort_id_desc">ID Descending</string>
    <string name="sort_count_asc">#Quotes Ascending</string>
    <string name="sort_count_desc">#Quotes Descending</string>
    <string name="sort_date_asc">Date Ascending</string>
    <string name="sort_date_desc">Date Descending</string>
</resources>
